--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 							<tr>
 								<th>Train Name</th>
 								<th>Destination</th>
-								<th>Frequency (min)</th>
-								<th>Next arrival</th>
-								<th>Minutes Away</th>
+								<th>First train</th>
+								<th>Frequency (mins)</th>
+								<th>Next Train</th>
 							</tr>
 						</thead>
 						<tbody>
